force-app/main/default/objects/CSV_INVOICE_DATA__c/CSV_INVOICE_DATA__c.object-meta.xml
<CustomObject>
    <label>CSV INVOICE DATA</label>
    <nameField>
        <displayFormat>CSV-{0000}</displayFormat>
        <label>CSV INVOICE DATA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSV INVOICE DATA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>