force-app/main/default/objects/CSV_INVOICE_DATA__c/fields/Commission_ID__c.field-meta.xml
<CustomField>
    <fullName>Commission_ID__c</fullName>
    <label>Commission ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>