force-app/main/default/objects/CSV_INVOICE_DATA__c/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <label>Commission Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>