force-app/main/default/objects/CSV_INVOICE_DATA__c/fields/Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID__c</fullName>
    <label>Contract ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>