force-app/main/default/objects/CSV_INVOICE_DATA__c/fields/Contract_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Months__c</fullName>
    <label>Contract Term Months</label>
    <length>255</length>
    <type>Text</type>
</CustomField>