force-app/main/default/objects/CSV_INVOICE_DATA__c/fields/Formula_for_match_with_Contract__c.field-meta.xml
<CustomField>
    <fullName>Formula_for_match_with_Contract__c</fullName>
    <formula>IF(Commodity__c = &quot;Gas&quot;,&quot;Gas&quot;,IF(Commodity__c = &quot;Power&quot;,&quot;Electricity&quot;,&quot; &quot;))&amp; &quot;-&quot;&amp;
Contract_Term_Months__c &amp; &quot;-&quot;&amp;
TEXT(DAY(Contract_Start_Date__c))+ &quot;-&quot; +TEXT(MONTH(Contract_Start_Date__c))+ &quot;-&quot; +TEXT(YEAR(Contract_Start_Date__c))
&amp; &quot;-&quot;&amp;
TEXT(DAY(Contract_End_Date__c))+ &quot;-&quot; +TEXT(MONTH(Contract_End_Date__c))+ &quot;-&quot; +TEXT(YEAR(Contract_End_Date__c))
&amp; &quot;-&quot; &amp;
Customer_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula for match with Contract</label>
    <type>Text</type>
</CustomField>