force-app/main/default/objects/CSV_INVOICE_DATA__c/fields/LDC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>LDC_End_Date__c</fullName>
    <label>LDC End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>