force-app/main/default/objects/CSV_INVOICE_DATA__c/fields/LDC_ID__c.field-meta.xml
<CustomField>
    <fullName>LDC_ID__c</fullName>
    <label>LDC ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>