force-app/main/default/objects/CSV_INVOICE_DATA__c/fields/Payment_Month__c.field-meta.xml
<CustomField>
    <fullName>Payment_Month__c</fullName>
    <label>Payment Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>