force-app/main/default/objects/CSV_INVOICE_DATA__c/fields/Small_Business_Source__c.field-meta.xml
<CustomField>
    <fullName>Small_Business_Source__c</fullName>
    <label>Small Business Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>