force-app/main/default/objects/CSV_INVOICE_DATA__c/fields/Tax_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Tax_Jurisdiction__c</fullName>
    <label>Tax Jurisdiction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>