force-app/main/default/objects/CSV_INVOICE_DATA__c/fields/Trigger_Deal__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Deal__c</fullName>
    <label>Trigger Deal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>