force-app/main/default/objects/CSV_INVOICE_DATA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Broker_Name__c</columns>
    <columns>Commission_Type__c</columns>
    <columns>Commodity__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Contract_Term_Months__c</columns>
    <columns>LDC_Account_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>